hphp/test/slow/traits/diamond_use/diamond_use7.php.expectf
Fatal error: Method 'foo' declared in multiple traits (T, T4) in %s/diamond_use7.php on line 31
